# ChangeLog for dev-util/rapidsvn
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.68 2010/02/13 21:16:38 nerdboy Exp $

*rapidsvn-0.12.0 (13 Feb 2010)

  13 Feb 2010; Steve Arnold <nerdboy@gentoo.org> +rapidsvn-0.12.0.ebuild:
  Updated to latest upstream release; closes bug #294740.

*rapidsvn-0.10.0 (12 Oct 2009)

  12 Oct 2009; Steve Arnold <nerdboy@gentoo.org> +rapidsvn-0.10.0.ebuild:
  Updated to latest upstream release, closes bug #284730.  Re-enabled the
  neon dav support, but it needs testing (the serf dav support is smooth
  as the proverbial baby's butt...)

  01 Aug 2009; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.8.ebuild:
  Added work-around for doxygen sandbox violation (no bug, yet...) due to
  font diddling by latex.  No idea why generating one particular jpg file
  would cause this.

*rapidsvn-0.9.8 (06 Jun 2009)

  06 Jun 2009; Steve Arnold <nerdboy@gentoo.org>
  +files/rapidsvn-0.9.8-sar.patch, +rapidsvn-0.9.8.ebuild:
  Added new version, updated use=doc generation (closes bug #265941).  The
  underlying subversion neon support is dorked up (at least for me) so this
  was tested with webdav-serf against a couple of different local repos.

  17 Sep 2008; Markus Meier <maekke@gentoo.org> rapidsvn-0.9.6-r1.ebuild:
  amd64/x86 stable, bug #237095

  17 Sep 2008; Brent Baude <ranger@gentoo.org> rapidsvn-0.9.6-r1.ebuild:
  stable ppc64, bug 237095

  15 Sep 2008; Brent Baude <ranger@gentoo.org> rapidsvn-0.9.6-r1.ebuild:
  stable ppc, bug 237095

  13 Sep 2008; Ferris McCormick <fmccor@gentoo.org>
  rapidsvn-0.9.6-r1.ebuild:
  Sparc stable --- Bug #237095 --- needed for subversion-1.5.1.

  13 Sep 2008; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.6-r1.ebuild:
  Removed harmless configure option (closes bug 230757) in preparation for
  stable request (see bug 237095).

  15 Jun 2008; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,