@@ -7,11 +7,11 @@ DIST rapidsvn-0.9.3.tar.gz 998268 RMD160 316904503ab1a067fb14b0567d6e28bc2a6ad6c
 DIST rapidsvn-0.9.4.tar.gz 1057482 RMD160 edbabab261b69acc78a2009f2da175b2b70c8987 SHA1 0f8eff53964f641253d6a4be82187ab9f30168c7 SHA256 20c6a17ed91171bae6c3af7b611b0f91395cb2962fc0cfe1d66dfd5178d60651
 DIST rapidsvn-0.9.6.tar.gz 1205771 RMD160 060a66d3f268f9a4018f01a9541df2a3394ed7b8 SHA1 266f846437e3bbce1707799ec0d95c2d1be43b4a SHA256 4e026b0e7a56b2a0ba4cd12b1ee224c8d0645e98eb5b682078220f912513b36d
 DIST rapidsvn-0.9.8.tar.gz 1212108 RMD160 a1614daff3631536c3eb0a14c279f0581b257fbf SHA1 22d145d2d686841da100d45789a663c70e325a3c SHA256 9af7462559d8a600a1b54ac19a79c111691818969e193a06080c9d9306b32b13
-EBUILD rapidsvn-0.10.0.ebuild 2616 RMD160 5ac126933d2e69205004c46b90598716110cbdc5 SHA1 2153f01ff0cbfa9c85024cd376f7c1ca362dd61d SHA256 149bccdb05f55b9f98066f27bd7329a0bc25174fb2dcdd38826eefc5f5d76636
-EBUILD rapidsvn-0.12.0.ebuild 2981 RMD160 72958099206e4f8d9c9afdaa732513e05915532e SHA1 020059511348465f117b4026f02370ef8df761d0 SHA256 8c52a9d9c06cb2121ca34064f24940b46ebc01933011e9c7b50137c22533986e
+EBUILD rapidsvn-0.10.0.ebuild 2837 RMD160 ff5e94630a2767dd003a2cd5fa411fdb880fbbb9 SHA1 f4b3a7bcd39826f5dbe44557b7d56f11c727aa5c SHA256 3e81b688bb0c22317cfc8385498aaaa2939e9cbd750c758b67516e78b11e5e21
+EBUILD rapidsvn-0.12.0.ebuild 2752 RMD160 1e679ed589baf24427233310a02e301c46cfc283 SHA1 7b01d129607368576cf8a1de3c6e39b46fb9ffc2 SHA256 d85ee7c77a0b8b7f98a33ff5d9edaf0e654a9568c5ee0c832e4a92ebf720f4a1
 EBUILD rapidsvn-0.9.3.ebuild 3091 RMD160 466e320834ce751fcfb7b8f94a629b63c1dbca09 SHA1 f207b23c2031d349aab9002440c4cbf10bb17435 SHA256 699bffef14e903b9f1774dc4701077c38abd9a9f2d82aea96e7670988e96ca0b
 EBUILD rapidsvn-0.9.4.ebuild 3072 RMD160 ec90d18c04914eda51f0170211c152c687acac70 SHA1 ac8e219a3680ee93e8db6b2db95a3ea994cc0af8 SHA256 82829bbb651c340d6b3d2eba80864798fbd9d824ab3473476b56753f23422805
-EBUILD rapidsvn-0.9.6-r1.ebuild 3373 RMD160 4d1382864a7b09cbc3a516a0a084be11826544bc SHA1 19b9a8cb6defc5b0a3c591783768bc401bcb8e5f SHA256 29b7bcef2d09ce5ca684ce36f3adf0ab0955b98a50d38681c1324cb5543c742d
-EBUILD rapidsvn-0.9.8.ebuild 3158 RMD160 749aa2960b3131b17bd59656787655e9923ab379 SHA1 9de39a885f18a45436af55638ee7050d47868bd2 SHA256 13b56e9b151c93bc0cb997b48ae1de1e152748a1580cf2a25223578a99c1d2ce
-MISC ChangeLog 11310 RMD160 1d1d9b33938a175fcc0ae74209e690e082980b63 SHA1 352d79ef17a04aaea5ac100800ff4734d64d1e54 SHA256 52fb081bfb0b6560435dc42a5b075df431d20cd5a782af86e23a1e9493017b3b
+EBUILD rapidsvn-0.9.6-r1.ebuild 3175 RMD160 573fbafa40f61dd472ae311f84a573989f95be78 SHA1 4f17f823be4336474d8782b86bb770a07689979a SHA256 dac0a2601c7e4797bce4a7dffd0fab8e47f55ca037085deb2a4b251464fef995
+EBUILD rapidsvn-0.9.8.ebuild 3006 RMD160 e0ebe5101158da24dc4dac65b9d064031c4d6d14 SHA1 5c58fbd329a2e753c5491c9237cefdadf27e2e65 SHA256 67b600df432e11ff703cf2595e5730034f3cbdbb305323fad37bb2aaf2e3578d
+MISC ChangeLog 11584 RMD160 3ebec90e5a4f77aa6b7a6edef0022fbfa0ed5feb SHA1 049b82de755cf9f4d8b73e1ea10d97357900f91b SHA256 ff1bfd81beda27a7525e8f3dfa640ddb9ae25d49665111206692f02ec1fd2692
 MISC metadata.xml 518 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b SHA1 6b9c6a8c99c7dd184cf048b4e306f0a0e5f81788 SHA256 b7e173df02d2585da2771a95e6acd8ae824e61887087747d227b9ea07bf0b435
