@@ -1,10 +1,11 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.12.0.ebuild,v 1.1 2010/02/13 21:16:38 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.12.0.ebuild,v 1.2 2010/02/16 01:32:40 nerdboy Exp $
 
 EAPI="2"
 
 WANT_AUTOCONF="2.5"
+WX_GTK_VER=2.8
 inherit versionator confutils libtool autotools wxwidgets flag-o-matic fdo-mime
 
 MY_PV=$(get_version_component_range 1-2)
@@ -19,7 +20,7 @@ KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="doc"
 
 COMMON_DEP=">=dev-util/subversion-1.5.0
-	>=x11-libs/wxGTK-2.6
+	x11-libs/wxGTK:2.8[X]
 	>=dev-libs/apr-1.2.10
 	>=dev-libs/apr-util-1.2.10"
 
@@ -44,13 +45,15 @@ pkg_setup() {
 	# if you compiled subversion without (the) apache2 (flag) and with the
 	# berkdb flag, you may get an error that it can't find the lib db4
 	# Note: this should be fixed in rapidsvn 0.9.3 and later
+
+	# check for the proper wxGTK support
+	need-wxwidgets unicode
 }
 
 src_prepare() {
 	# Apparently we still need the --as-needed link patch...
 	#export EPATCH_OPTS="-F3 -l"
 	epatch "${FILESDIR}/${PN}-svncpp_link.patch"
-	#epatch "${FILESDIR}/${P}-sar.patch"
 	eautoreconf
 }
 
@@ -69,11 +72,6 @@ src_configure() {
 		    --without-doxygen --without-dot"
 	fi
 
-	local INST_WX=$(best_version x11-libs/wxGTK)
-	export WX_GTK_VER=$(get_version_component_range 1-2 \
-		        ${INST_WX/x11-libs\/wxGTK})
-
-	need-wxwidgets ansi
 	myconf="${myconf} --with-wx-config=${WX_CONFIG}"
 
 	append-flags $( /usr/bin/apr${apr_suffix}-config --cppflags )
@@ -86,11 +84,7 @@ src_configure() {
 }
 
 src_compile() {
-	## doxygen made a sandbox error; no bug filed yet
-	if use doc; then
-		addpredict /var/cache/fontconfig
-		emake  || die "emake failed"
-	fi
+	emake  || die "emake failed"
 }
 
 src_install() {
