@@ -1,8 +1,9 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.9.6-r1.ebuild,v 1.6 2008/09/17 20:46:01 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.9.6-r1.ebuild,v 1.7 2010/02/16 01:32:40 nerdboy Exp $
 
 WANT_AUTOCONF="2.5"
+WX_GTK_VER=2.8
 inherit versionator eutils libtool autotools wxwidgets flag-o-matic fdo-mime
 
 DESCRIPTION="Cross-platform GUI front-end for the Subversion revision system."
@@ -15,7 +16,7 @@ IUSE="doc static"
 
 COMMON_DEP=">=dev-util/subversion-1.4.4
 	>=net-misc/neon-0.26
-	>=x11-libs/wxGTK-2.6
+	=x11-libs/wxGTK-2.8*
 	>=dev-libs/apr-1.2.10
 	>=dev-libs/apr-util-1.2.10"
 
@@ -29,18 +30,7 @@ RDEPEND="${COMMON_DEP}"
 
 RESTRICT=""
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
-	# Apparently we still need the --as-needed link patch...
-	epatch "${FILESDIR}/${PN}-svncpp_link.patch"
-	epatch "${FILESDIR}/${PN}-sar.patch"
-	eautoconf
-	elibtoolize
-}
-
-src_compile() {
+pkg_setup() {
 	einfo "Checking for subversion compiled with WebDAV support..."
 	if ! built_with_use --missing true -o dev-util/subversion webdav-neon webdav-serf || \
 	built_with_use --missing false dev-util/subversion nowebdav; then
@@ -55,18 +45,31 @@ src_compile() {
 	# if you compiled subversion without (the) apache2 (flag) and with the
 	# berkdb flag, you will get an error that it can't find the lib db4
 	# Note: this should be fixed in rapidsvn 0.9.3 and later
+
+	# check for the proper wxGTK support
+	need-wxwidgets unicode
+}
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+
+	# Apparently we still need the --as-needed link patch...
+	epatch "${FILESDIR}/${PN}-svncpp_link.patch"
+	epatch "${FILESDIR}/${PN}-sar.patch"
+	eautoconf
+	elibtoolize
+}
+
+src_compile() {
 	local myconf
-	local xslss_dir
 	local apr_suffix=""
 
 	if has_version ">dev-libs/apr-util-1"; then
 		apr_suffix="-1"
 	fi
 
-	if use doc; then
-		xslss_dir=$(ls -1d /usr/share/sgml/docbook/xsl-stylesheets*|head -n1)
-		myconf="--with-docbook-xsl=$xslss_dir"
-	else
+	if ! use doc; then
 		myconf="--without-xsltproc --without-doxygen --without-dot"
 	fi
 
@@ -76,11 +79,6 @@ src_compile() {
 		myconf="${myconf} --disable-static --enable-shared"
 	fi
 
-	local INST_WX=$(best_version x11-libs/wxGTK)
-	export WX_GTK_VER=$(get_version_component_range 1-2 \
-		        ${INST_WX/x11-libs\/wxGTK})
-
-	need-wxwidgets ansi
 	myconf="${myconf} --with-wx-config=${WX_CONFIG}"
 
 	append-flags $( /usr/bin/apr${apr_suffix}-config --cppflags )
@@ -91,6 +89,7 @@ src_compile() {
 		--with-apr-config="/usr/bin/apr${apr_suffix}-config" \
 		--with-apu-config="/usr/bin/apu${apr_suffix}-config" \
 		${myconf} || die "econf failed"
+
 	emake  || die "emake failed"
 }
 
