@@ -1,8 +1,9 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.9.8.ebuild,v 1.2 2009/08/01 15:42:52 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.9.8.ebuild,v 1.3 2010/02/16 01:32:40 nerdboy Exp $
 
 WANT_AUTOCONF="2.5"
+WX_GTK_VER=2.8
 inherit versionator eutils libtool autotools wxwidgets flag-o-matic fdo-mime
 
 DESCRIPTION="Cross-platform GUI front-end for the Subversion revision system."
@@ -14,7 +15,7 @@ KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="doc"
 
 COMMON_DEP=">=dev-util/subversion-1.5.0
-	>=x11-libs/wxGTK-2.6
+	=x11-libs/wxGTK-2.8*
 	>=dev-libs/apr-1.2.10
 	>=dev-libs/apr-util-1.2.10"
 
@@ -28,6 +29,26 @@ RDEPEND="${COMMON_DEP}"
 
 RESTRICT=""
 
+pkg_setup() {
+	einfo "Checking for subversion compiled with WebDAV support..."
+	if ! built_with_use --missing true -o dev-util/subversion webdav-neon webdav-serf || \
+	built_with_use --missing false dev-util/subversion nowebdav; then
+		ewarn "SVN (dev-util/subversion) must be compiled with WebDAV support."
+		ewarn "Please re-emerge subversion with webdav-neon or webdav-serf USE flag"
+		ewarn "and without the nowebdav USE flag."
+		die "SVN merged without WebDAV support"
+	else
+		einfo "Found WebDAV support; continuing..."
+	fi
+
+	# if you compiled subversion without (the) apache2 (flag) and with the
+	# berkdb flag, you will get an error that it can't find the lib db4
+	# Note: this should be fixed in rapidsvn 0.9.3 and later
+
+	# check for the proper wxGTK support
+	need-wxwidgets unicode
+}
+
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
@@ -40,20 +61,6 @@ src_unpack() {
 }
 
 src_compile() {
-	einfo "Checking for subversion compiled with WebDAV support..."
-	if ! built_with_use --missing true -o dev-util/subversion webdav-serf || \
-	built_with_use --missing false dev-util/subversion nowebdav; then
-		ewarn "SVN (dev-util/subversion) must be compiled with WebDAV support."
-		ewarn "Please re-emerge subversion with the webdav-serf USE flag and"
-		ewarn "without the nowebdav USE flag."
-		die "SVN merged without WebDAV support"
-	else
-		einfo "Found WebDAV support; continuing..."
-	fi
-
-	# if you compiled subversion without (the) apache2 (flag) and with the
-	# berkdb flag, you will get an error that it can't find the lib db4
-	# Note: this should be fixed in rapidsvn 0.9.3 and later
 	local myconf
 	local apr_suffix=""
 
@@ -68,11 +75,6 @@ src_compile() {
 		    --without-doxygen --without-dot"
 	fi
 
-	local INST_WX=$(best_version x11-libs/wxGTK)
-	export WX_GTK_VER=$(get_version_component_range 1-2 \
-		        ${INST_WX/x11-libs\/wxGTK})
-
-	need-wxwidgets ansi
 	myconf="${myconf} --with-wx-config=${WX_CONFIG}"
 
 	append-flags $( /usr/bin/apr${apr_suffix}-config --cppflags )
@@ -83,11 +85,7 @@ src_compile() {
 		--with-apu-config="/usr/bin/apu${apr_suffix}-config" \
 		${myconf} || die "econf failed"
 
-	## doxygen made a sandbox error; no bug filed yet
-	if use doc; then
-		addpredict /var/cache/fontconfig
-		emake  || die "emake failed"
-	fi
+	emake  || die "emake failed"
 }
 
 src_install() {
